# CMTI-Design-and-Innovation-Clinic

./: smart_waste_dashboard.py  waste_management_dashboard.py
backend/: .env.docker  .env.example  .gitignore  BIN_DEVICE_API_IMPLEMENTATION_PLAN.md  COLLECTION_OPERATIONS_GAP_ANALYSIS_AND_PLAN.md  COMMANDS.md  DB_SCHEMA_TODO.md  INVENTORY.md  QUICKSTART.md  README.md  ROUTES_IMPLEMENTATION_STATUS.md  SETUP.md  START_HERE.txt  STRUCTURE.md  app.py  bin_registry.json  collection_centers.json  docker-compose.yml  pyproject.toml  requirements.txt  setup.ps1  setup.sh
backend/alembic/: alembic.ini  env.py  script.py.mako
backend/app/: __init__.py  main.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  database.py  seed_initial_data.py
backend/app/models/: __init__.py  base.py  iot.py  waste_bin.py
backend/app/schemas/: __init__.py  alerts.py  auth.py  (+13 more)
backend/docs/: API_Route_Document.md  ROUTE_OPTIMIZATION_AND_AUTO_TRIGGER.md
backend/tests/: __init__.py  conftest.py  load_check_mqtt_ingest.py  test_analytics_routes.py  test_auth_routes.py  test_bin_device_routes.py  test_bin_state_realtime_service.py  test_master_data_routes.py  test_mqtt_ingestion_resolution.py  test_mqtt_telemetry_routes.py  test_notifications_dispatcher.py  test_notifications_routes.py  test_operations_assignments_routes.py  test_operations_hardening_services.py  test_operations_route_planning_routes.py  test_operations_stops_routes.py  test_operations_vehicle_shift_routes.py  test_telemetry_retention_service.py  test_telemetry_service.py  test_user_alert_routes.py
(+95 files in other folders)
