[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-waste-dashboard-api"
version = "0.1.0"
description = "FastAPI backend for Smart Waste Dashboard"
requires-python = ">=3.10"
authors = [
    { name = "CMTI Team", email = "admin@cmti.local" }
]
dependencies = [
    "fastapi[standard]==0.135.0",
    "uvicorn[standard]==0.44.0",
    "pydantic==2.10.0",
    "pydantic-settings==2.6.0",
    "sqlalchemy==2.0.49",
    "asyncpg==0.31.0",
    "alembic==1.14.0",
    "paho-mqtt==2.1.0",
    "python-dotenv==1.0.1",
    "python-multipart>=0.0.18",
    "email-validator==2.2.0",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "ruff==0.4.0",
    "black==24.4.0",
    "mypy==1.11.0",
]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "ruff==0.4.0",
    "black==24.4.0",
    "mypy==1.11.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.hatch.build.targets.wheel]
packages = ["app"]
